--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(COP_Cplusplus_ThirdLaboratory)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(COP_Cplusplus_ThirdLaboratory main.cpp)
+add_executable(COP_Cplusplus_ThirdLaboratory main.cpp
+        examples/1/main.cpp)
