--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(COP_Cplusplus_ThirdLaboratory)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(COP_Cplusplus_ThirdLaboratory main.cpp
-        examples/1/main.cpp)
+add_executable(COP_Cplusplus_ThirdLaboratory
+        examples/1/main.cpp
+        examples/interfaces.cpp
+        examples/interfaces.h
+        examples/main.cpp)
